deployment_strategies/canary_deployment/deployment_v1_canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-shop-v1
  namespace: canary-ns
  labels:
    app: online-shop
    version: v1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: online-shop
      version: v1
  template:
    metadata:
      labels:
        app: online-shop
        version: v1
    spec:
      containers:
        - name: online-shop
          image: amitabhdevops/online_shop_without_footer
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
